--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,8 +54,23 @@ jobs:
         shell: bash
         run: echo "$(go env GOPATH)/bin" >> "$GITHUB_PATH"
 
+      - name: Install NSIS (Windows)
+        if: runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          choco install nsis -y --no-progress
+          $env:PATH += ";C:\Program Files (x86)\NSIS"
+          "C:\Program Files (x86)\NSIS" | Out-File $env:GITHUB_PATH -Encoding utf8 -Append
+          makensis /VERSION
+
       - name: Build App
         run: wails build -clean -platform "${{ matrix.platform }}" -o stock-report-analysis -ldflags "-X main.Version=${{ github.ref_name }}" ${{ matrix.build_flags }}
+
+      - name: Debug Windows Build Outputs
+        if: runner.os == 'Windows'
+        shell: pwsh
+        run: |
+          Get-ChildItem "build/bin" -Recurse | Select-Object FullName,Length | Format-Table -AutoSize
 
       - name: Package macOS Asset
         id: package_macos
@@ -72,7 +87,9 @@ jobs:
         if: runner.os == 'Windows'
         shell: pwsh
         run: |
-          $installer = Get-ChildItem "build/bin" -Filter "*installer.exe" | Select-Object -First 1
+          $installer = Get-ChildItem "build/bin" -Recurse -File |
+            Where-Object { $_.Name -match "installer\.exe$" } |
+            Select-Object -First 1
           if (-not $installer) {
             throw "未找到 Windows 安装包（*installer.exe），请检查 wails -nsis 输出"
           }
